--- a/application/admin/view/goods/goods_attr.html
+++ b/application/admin/view/goods/goods_attr.html
@@ -8,12 +8,12 @@
                 <div class="ibox-title">
                     <h5>{$meta_title}</h5>
                     <div class="pull-right" style="margin-top:-8px;">
-                            <a class="btn btn-info" href="{:url('add_goods_attr')}"><i class="fa fa-plus"></i> 添加品牌</a>
+                            <a class="btn btn-info" href="{:url('add_goods_attr')}"><i class="fa fa-plus"></i> 添加栏目</a>
                     </div>
                 </div>
                 <div class="ibox-content">
                     <div class="row" style="margin-left:0px;" >
-                        <a class="btn btn-default delete" href="{:url('add_goods_attr')}" >添加品牌 </i></a>
+                        <a class="btn btn-default delete" href="{:url('add_goods_attr')}" >添加栏目 </i></a>
                         <!-- <a class="btn btn-default delete" onclick="del_all(0)" href="javascript:;" >批量删除 <i class="fa fa-trash-o"></i></a> -->
                     </div>
 
@@ -38,6 +38,7 @@
                                 <td>{$vo.sort}</td>
                                 <td>
                                     <a class="btn btn-default delete" href="{:url('add_goods_attr',['id'=>$vo.id],false)}" >编辑 </i></a>
+                                    <a class="btn btn-default delete" href="{:url('add_goods_attr',['pid'=>$vo.id],false)}" >添加子分类 </i></a>
                                     <a class="btn btn-default delete" onclick="del(this,{$vo.id})" href="javascript:;" >删除 </i></a>
                                 </td>
                             </tr>
