--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -140,13 +140,21 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">商品属性</label>
+                            <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品栏目</label>
                             <div class="col-sm-9">
-                                {volist name="goods_attr" id="vo"}
-                                <label style="margin-top:4px; margin-right:20px;">
-                                    <input type="checkbox" value="{$vo.id}" class="goods_attr" name="goods_attr[]" /> {$vo.name}
-                                </label>
-                                {/volist}
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;">
+                                    <select class="form-control" name="goods_attr1" onchange="ajaxGetAttr(this)">
+                                        <option value="" >请选择一级栏目</option>
+                                        {volist name="goods_attr" id="vo"}
+                                        <option value="{$vo.id}" >{$vo.name}</option>
+                                        {/volist}
+                                    </select>
+                                </div>
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;">
+                                    <select class="form-control" name="goods_attr2">
+                                        <option value="" >请选择二级栏目</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
 
@@ -247,7 +255,6 @@
                                     <span style="float:left;"><input type="radio" value="1" name="shipping_setting" checked /> 统一运费</span>
                                     <span style="float:left;width:30%;margin:0 7px;"><input type="text" name="shipping_price" value="" class="form-control"></span>
                                     <span style="float:left;">元</span>
-                                    
                                 </label>
                                 
                                 <label style="line-height:34px;width: 35%;">
@@ -362,8 +369,27 @@
 <script type="text/javascript" src="__STATIC__/ueditor/1.4.3/ueditor.all.min.js"> </script> 
 <script type="text/javascript" src="__STATIC__/ueditor/1.4.3/lang/zh-cn/zh-cn.js"></script> 
 <script src="__STATIC__/layui/src/localResizeIMG2.js" type="text/javascript"></script>
-
 <script type="text/javascript">
+//ajax获取二级栏目
+function ajaxGetAttr(obj){
+    var id = $(obj).val()
+    if(!id){
+        return false;
+    }
+    $.post("{:url('goods/ajaxGetAttr')}",{'id':id},function(data){
+        alert(2)
+        if(data.status){
+            alert(1)
+            $.each(data.data,function(k,v){
+                console.log(k)
+            })
+        }
+    },'json')
+}
+$.post("{:url('goods/ajaxGetAttr')}",{'id':999},function(data){
+    alert(111);
+    
+},'json');
 
 var rowCount = $("#goods_table tbody").find("tr").length - 1; //行数
 var colCount = $("#goods_table thead").find("tr").find("th").length - 4; //列数
