--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -208,11 +208,16 @@
                             <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品分类</label>
                             <div class="col-sm-9">
                                 <div style="line-height:34px;float:left;margin:0 10px 0 0;">
-                                    <select class="form-control" name="cat_id1">
+                                    <select class="form-control" name="cat_id1" onchange="ajaxGetCategory(this)">
                                         <option value="" >请选择一级分类</option>
-                                        {volist name="cat_id1" id="vo"}
+                                        {volist name="goods_cat" id="vo"}
                                         <option value="{$vo.cat_id}">{$vo.cat_name}</option>
                                         {/volist}
+                                    </select>
+                                </div>
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;">
+                                    <select class="form-control" name="cat_id2">
+                                        <option value="" >请选择二级分类</option>
                                     </select>
                                 </div>
 
@@ -273,7 +278,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label class="col-sm-2 control-label">是否支持货到付款</label>
                             <div class="col-sm-9">
                                 <label style="margin-top:4px; margin-right:20px;">
@@ -283,7 +288,7 @@
                                     <input type="radio" value="0" name="is_hdfk" checked /> 不支持
                                 </label>
                             </div>
-                        </div>
+                        </div> -->
     
                         <div class="form-group">
                             <label class="col-sm-2 control-label">用户最多购买量</label>
@@ -374,25 +379,44 @@
 function ajaxGetAttr(obj){
     var id = $(obj).val()
     if(!id){
+        $('select[name="goods_attr2"]').html('<option>请选择二级栏目</option>');
         return false;
     }
     $.post("{:url('goods/ajaxGetAttr')}",{'id':id},function(data){
-        alert(2)
         if(data.status){
-            alert(1)
+            var option = '<option>请选择二级栏目</option>';
             $.each(data.data,function(k,v){
-                console.log(k)
+                option += '<option value="'+v.id+'">'+v.name+'</option>';
             })
+            $('select[name="goods_attr2"]').html(option);
+
         }
     },'json')
 }
-$.post("{:url('goods/ajaxGetAttr')}",{'id':999},function(data){
-    alert(111);
-    
-},'json');
+
+//ajax获取二级分类
+function ajaxGetCategory(obj){
+    var id = $(obj).val()
+    if(!id){
+        $('select[name="cat_id2"]').html('<option>请选择二级分类</option>');
+        return false;
+    }
+    $.post("{:url('goods/ajaxGetCategory')}",{'id':id},function(data){
+        if(data.status){
+            var option = '<option>请选择二级分类</option>';
+            $.each(data.data,function(k,v){
+                option += '<option value="'+v.cat_id+'">'+v.cat_name+'</option>';
+            })
+            $('select[name="cat_id2"]').html(option);
+
+        }
+    },'json')
+}
+
+
 
 var rowCount = $("#goods_table tbody").find("tr").length - 1; //行数
-var colCount = $("#goods_table thead").find("tr").find("th").length - 4; //列数
+var colCount = $("#goods_table thead").find("tr").find("th").length - 3; //列数
 var col_id = 0;
 // 添加行
 function addRow(){
@@ -406,10 +430,7 @@ function addRow(){
 		}
 		var base_row ='<td class="td_1"><input class="input-text" type="text" name="goods_td[1][]"></td>'+add_td+'<td><input class="input-text" type="text" name="attr_td[l][]"></td><td><input class="input-text" type="text" name="attr_td[w][]"></td><td><input class="input-text" type="text" name="attr_td[h][]"></td><td style="display: none;"><input class="input-text" type="text" name="attr_td[v][]" value="nonentity"></td><td><input class="input-text" type="text" name="attr_td[wg][]"></td><td><select style="height:25px" name="ref_td[ref][]"><option value="">--选择温藏--</option><option value="-18℃">-18℃</option><option value="-25℃ ~ -4℃">-25℃ ~ -4℃</option><option value="-4℃ ~ 10℃">-4℃ ~ 10℃</option><option value="0℃ ~ 8℃">0℃ ~ 8℃</option><option value="4℃ ~ 10℃">4℃ ~ 10℃</option></select></td><td><input type="hidden" class="pri_id" value="" name="pri_td[pri][]"><button  class="btn btn-primary radius pri_button" type="button">{:lang(\'本店售价\')}</button></td><td><input class="input-text" type="text" name="goods_td[num][]"></td><td onclick="delTr(this)"><i class="Hui-iconfont del_td"></i></td>';
 	}
-
-
 	var html = '<tr class = "tr_'+rowCount+'">'+base_row+'</tr>';
-
 	$("#goods_table tbody").append(html);
 }
 // 添加列
@@ -425,7 +446,6 @@ function addCol(){
         alert('{:lang(\'名称不能为空\')}');
         return false;
     }
-
     var th = '<th class="th_'+colCount+'"><input type="text" readonly="readonly" style="border: 0px;width:85%" name="goods_th['+colCount+'][]" value="'+table_th+'"><i class="Hui-iconfont del_td th_close" style="color: #778899;display:none;"></i></th>';
     var th_num = colCount - 1;
     $("#goods_table thead tr .th_"+th_num).after(th);
