--- a/application/admin/view/goods/edit.html
+++ b/application/admin/view/goods/edit.html
@@ -166,13 +166,23 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">商品属性</label>
+                            <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品栏目</label>
                             <div class="col-sm-9">
-                                {volist name="goods_attr" id="vo"}
-                                <label style="margin-top:4px; margin-right:20px;">
-                                    <input {if condition="is_array($info.goods_attr) and in_array($vo.id,$info.goods_attr)"} checked {/if} type="checkbox" value="{$vo.id}" class="goods_attr" name="goods_attr[]" /> {$vo.name}
-                                </label>
-                                {/volist}
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;">
+                                    <select class="form-control" name="goods_attr1" onchange="ajaxGetAttr(this)">
+                                        <option value="" >请选择一级栏目</option>
+                                        {volist name="goods_attr" id="vo"}
+                                        <option value="{$vo.id}" {if condition="$info.goods_attr1 eq $vo.id"}selected{/if} >{$vo.name}</option>
+                                        {/volist}
+                                    </select>
+                                </div>
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;">
+                                    <select class="form-control" name="goods_attr2">
+                                        {volist name="goods_attr2" id="vo"}
+                                        <option value="{$vo.id}" {if condition="$info.goods_attr2 eq $vo.id"}selected{/if} >{$vo.name}</option>
+                                        {/volist}
+                                    </select>
+                                </div>
                             </div>
                         </div>
 
@@ -239,10 +249,17 @@
                             <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品分类</label>
                             <div class="col-sm-9">
                                 <div style="line-height:34px;float:left;margin:0 10px 0 0;">
-                                    <select class="form-control" name="cat_id1">
+                                    <select class="form-control" name="cat_id1"  onchange="ajaxGetCategory(this)">
                                         <option value="" >请选择一级分类</option>
-                                        {volist name="cat_id1" id="vo"}
+                                        {volist name="goods_cat" id="vo"}
                                         <option {if condition="$info.cat_id1 eq $vo.cat_id"} selected {/if} value="{$vo.cat_id}">{$vo.cat_name}</option>
+                                        {/volist}
+                                    </select>
+                                </div>
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;">
+                                    <select class="form-control" name="cat_id2">
+                                        {volist name="goods_cat2" id="vo"}
+                                        <option {if condition="$info.cat_id2 eq $vo.cat_id"} selected {/if} value="{$vo.cat_id}">{$vo.cat_name}</option>
                                         {/volist}
                                     </select>
                                 </div>
@@ -305,7 +322,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label class="col-sm-2 control-label">是否支持货到付款</label>
                             <div class="col-sm-9">
                                 <label style="margin-top:4px; margin-right:20px;">
@@ -315,7 +332,7 @@
                                     <input type="radio" value="0" name="is_hdfk" {if condition="!$info.is_hdfk"} checked {/if} /> 不支持
                                 </label>
                             </div>
-                        </div>
+                        </div> -->
 
 
     
@@ -416,7 +433,43 @@
       .mask_img img{position: relative;top: 30%;left: 50%;}
   </style>
 <script type="text/javascript">
+    //ajax获取二级栏目
+function ajaxGetAttr(obj){
+    var id = $(obj).val()
+    if(!id){
+        $('select[name="goods_attr2"]').html('<option>请选择二级栏目</option>');
+        return false;
+    }
+    $.post("{:url('goods/ajaxGetAttr')}",{'id':id},function(data){
+        if(data.status){
+            var option = '<option>请选择二级栏目</option>';
+            $.each(data.data,function(k,v){
+                option += '<option value="'+v.id+'">'+v.name+'</option>';
+            })
+            $('select[name="goods_attr2"]').html(option);
 
+        }
+    },'json')
+}
+
+//ajax获取二级分类
+function ajaxGetCategory(obj){
+    var id = $(obj).val()
+    if(!id){
+        $('select[name="cat_id2"]').html('<option>请选择二级分类</option>');
+        return false;
+    }
+    $.post("{:url('goods/ajaxGetCategory')}",{'id':id},function(data){
+        if(data.status){
+            var option = '<option>请选择二级分类</option>';
+            $.each(data.data,function(k,v){
+                option += '<option value="'+v.cat_id+'">'+v.cat_name+'</option>';
+            })
+            $('select[name="cat_id2"]').html(option);
+
+        }
+    },'json')
+}
 
     var rowCount = $("#goods_table tbody").find("tr").length - 1; //行数
     var colCount = $("#goods_table thead").find("tr").find("th").length - 6; //列数
