--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -71,6 +71,7 @@
                                 <th>库存</th>
                                 <th>销量</th>
                                 <th>上架时间</th>
+                                <th>首页推荐</th>
                                 <th>操作</th>
                             </tr>
                             </thead>
