--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -220,9 +220,19 @@
                                         <option value="" >请选择二级分类</option>
                                     </select>
                                 </div>
-
-
-
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品品牌</label>
+                            <div class="col-sm-9">
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;">
+                                    <select class="form-control" name="brand_id" onchange="ajaxGetCategory(this)">
+                                        <option value="" >请选择品牌</option>
+                                        {volist name="brand" id="vo"}
+                                        <option value="{$vo.id}">{$vo.name}</option>
+                                        {/volist}
+                                    </select>
+                                </div>
                             </div>
                         </div>
 
