--- a/application/admin/view/goods/edit.html
+++ b/application/admin/view/goods/edit.html
@@ -185,7 +185,19 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label"><span style="color:red;">*</span>商品品牌</label>
+                            <div class="col-sm-9">
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;">
+                                    <select class="form-control" name="brand_id" onchange="ajaxGetCategory(this)">
+                                        <option value="" >请选择品牌</option>
+                                        {volist name="brand" id="vo"}
+                                        <option value="{$vo.id}" {if condition="$vo.id eq $info.brand_id"}selected{/if}>{$vo.name}</option>
+                                        {/volist}
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
                         <style type="text/css">
                             .li_img{margin: 10px;border: 1px solid #ccc;}
                             .main{text-align: center;cursor: pointer;}
@@ -200,7 +212,7 @@
                                                 {if condition="$vo"}
                                                 <li style="padding: 10px;" class="li_img"><span imgid="{$vo.id}" class="del"></span>
                                                 <div>
-                                                <img class="wh60" src="__IMAGES__/{$vo.picture}" onclick="showimg({$key})">
+                                                <img class="wh60" src="{$vo.picture}" onclick="showimg({$key})">
                                                 </div>
                                                 {if condition="$vo.main"}
                                                 <div style="color:green;" class="main">主图</div>
