--- a/application/admin/view/goods/add_goods_attr.html
+++ b/application/admin/view/goods/add_goods_attr.html
@@ -73,6 +73,7 @@
                 <div class="ibox-content">
                     <form method="post" class="form-horizontal" action="">
                         <input type="hidden" name="id" value="{$info.id}">
+                        <input type="hidden" name="priture" value="{$info.priture}">
                         <div class="form-group">
                             <label class="col-sm-2 control-label"><span style="color:red;">*</span>栏目名称</label>
                             <div class="col-sm-9">
@@ -97,6 +98,17 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">广告图</label>
+                            <div class="col-sm-9">
+                                    <dd class="upload_area clearfix" style="margin: 0 auto;">
+                                        <ul id="imglist" class="post_imglist">
+                                            <li><img class="wh60" id="image_src" src="{$info.priture|default='/static/images/default.jpg'}"></li>
+                                        </ul>
+                                        <label for="image_file"><div class="upload_btn"></div></label>
+                                    </dd>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-sm-2 control-label">排序</label>
                             <div class="col-sm-9">
                                 <input type="text" name="sort" value="{$info.sort}" class="form-control">
@@ -109,6 +121,10 @@
                             </div>
                         </div>
                     </form>
+                     <!-- 图片上传 -->
+                     <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
+                        <input type="file" id="image_file" value="" accept="image/*" name="file" onchange="upload_file()" style="display: none">
+                    </form>
                 </div>
             </div>
         </div>
@@ -119,4 +135,18 @@
 
 {block name="script"}
 <script src="__STATIC__/layui/src/localResizeIMG2.js" type="text/javascript"></script>
+<script src="__STATIC__/js/jquery.form.js" type="text/javascript"></script>
+<script type="text/javascript">
+    //文件上传
+    function upload_file(){
+        $("#ajaxForm").ajaxSubmit(function (data) {
+            if(data.status == 1){
+                $('input[name="priture"]').val(data.data);
+                $('#image_src').attr('src',data.data);
+            }else{
+                alert(data.msg);
+            }
+        });
+    }
+</script>
 {/block}
