--- a/application/admin/view/goods/add_goods_brand.html
+++ b/application/admin/view/goods/add_goods_brand.html
@@ -91,7 +91,7 @@
                                     </dd>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group"> 
                             <label class="col-sm-2 control-label">简介</label>
                             <div class="col-sm-9">
                                 <textarea name="introduce" required lay-verify="required" placeholder="请输入简介" class="layui-textarea">{$info.introduce}</textarea>
@@ -132,7 +132,7 @@
 <script src="__STATIC__/layui/src/localResizeIMG2.js" type="text/javascript"></script>
 <script src="__STATIC__/js/jquery.form.js" type="text/javascript"></script>
 <script type="text/javascript">
-    //音乐上传
+    //文件上传
     function upload_file(){
         $("#ajaxForm").ajaxSubmit(function (data) {
             if(data.status == 1){
